--- a/dark-chess.html
+++ b/dark-chess.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,8 @@
 
     <title>
 Dark-Chess    </title>
+
+    <link rel="shortcut icon" href="static/favicon.png">
 
     <!-- CSS for Layout -->
     <link rel="stylesheet" type="text/css" href="theme/css/katex.min.css">
@@ -17,21 +19,20 @@ Dark-Chess    </title>
 
     <!-- CSS for Colors -->
     <link rel="stylesheet" type="text/css" id="light-rotated-theme-css"
-          class="color-css" href="theme/css/color-light-rotated.css">
+          class="color-css" href="theme/css/colors/color-light-rotated.css">
     <link rel="stylesheet" type="text/css" id="light-default-theme-css"
-          class="color-css" href="theme/css/color-light-default.css">
+          class="color-css" href="theme/css/colors/color-light-default.css">
     <link rel="stylesheet" type="text/css" id="dark-rotated-theme-css"
-          class="color-css" href="theme/css/color-dark-rotated.css">
+          class="color-css" href="theme/css/colors/color-dark-rotated.css">
     <link rel="stylesheet" type="text/css" id="dark-default-theme-css"
-          class="color-css" href="theme/css/color-dark-default.css">
+          class="color-css" href="theme/css/colors/color-dark-default.css">
+    <link rel="stylesheet" type="text/css" href="theme/css/colors/pygments.css">
 
-    <!--
-    The google fonts API nominally minimizes data collection
-    https://developers.google.com/fonts/faq
-    #what_does_using_the_google_fonts_api_mean_for_the_privacy_of_my_users
-    -->
+    <link rel="stylesheet" type="text/css" href="theme/css/colors.css">
+
+
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Raleway:600i|Roboto">
+          href="theme/css/fonts.css">
 
     <!-- JS for Color Theming -->
     <script type="text/javascript">
@@ -52,7 +53,7 @@ Dark-Chess    </title>
          for (var i=0; i < color_links.length; i++) {
              var link = color_links[i];
              if (link.attributes['id'].value == (val + '-theme-css')) {
-                 link.href = 'theme/css/color-' + val + '.css';
+                 link.href = 'theme/css/colors/color-' + val + '.css';
              } else {
                  link.removeAttribute('href');
              }
@@ -150,9 +151,10 @@ Dark-Chess    </title>
         </nav>
       </menu>
 
+      <div id="top-spacer"></div>
 
 <header>
-    <h1>
+    <h1 id="title-header">
         Dark-Chess
     </h1>
 </header>
@@ -163,9 +165,8 @@ Dark-Chess    </title>
 <script crossorigin="anonymous" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="/js/chessboard.js"></script>
 <script src="/js/chess.js"></script>
-<!-- <script src="/js/md5.min.js"></script> -->
 <p><span id="status"></span></p>
-<div id="board" style="width: 100%"></div>
+<div id="board" style="width: 100%;"></div>
 <br/>
 <div style="text-align:center;">
 <input id="startBtn" type="button" value="&lt;&lt;"/>
@@ -177,12 +178,14 @@ Dark-Chess    </title>
 </div>
 <hr/>
 <div style="text-align:center;">
+<input onclick="window.location.href='/dark-chess'" type="button" value="New"/>
 <input id="linkBtn" type="button" value="Link"/>
 <input id="fenBtn" type="button" value="FEN"/>
 <input id="pgnBtn" type="button" value="PGN"/>
 <input id="loadBtn" type="button" value="Load"/>
 </div>
-<br/>
+<br>
+</br>
 <textarea id="field" style="width: 100%; height: 400px;"></textarea>
 <hr/>
         Game Options: <br/><i>must be set at beginning of game</i> <br/><br/>
@@ -205,10 +208,15 @@ Dark-Chess    </title>
 
         See Also:<br/>
 <a href="/chess.html" id="generated-link-id0">Normal Chess</a><br/>
-<a href="https://en.wikipedia.org/wiki/Dark_chess" id="generated-link-id1">Dark Chess (Wikipedia)</a><br/>
+<a class="wikipedia_link" endpoint="https://en.wikipedia.org/api/rest_v1/page/summary/Dark_chess" href="https://en.wikipedia.org/wiki/Dark_chess" id="generated-link-id1">Dark Chess (Wikipedia)</a><br/>
 <a href="http://chessboardjs.com/" id="generated-link-id2">chessboard.js</a><br/>
 <a href="https://github.com/jhlywa/chess.js" id="generated-link-id3">chess.js</a><br/>
 <script type="text/javascript">
+
+ function copyField() {
+     document.getElementById("field").select();
+     document.execCommand("copy");
+ }
 
  // anonymous function to disallow trivial console inspection
  (function() {
@@ -640,8 +648,10 @@ Dark-Chess    </title>
      else {
          status += movecolor + ' to move';
 
-         // check?
-         if (params.a && game.in_check() === true) {
+         var ourturn = params.w == (game.turn() == 'w');
+
+         // check, and our turn
+         if (ourturn && params.a && game.in_check() === true) {
              status += '; ' + movecolor + ' is in check';
          }
 
@@ -746,12 +756,12 @@ Dark-Chess    </title>
      }
      update();
      fieldEl.val(generate_url());
-     fieldEl.select();
+     copyField();
  });
  $('#fenBtn').on('click', function() {
      if (params.r) {
          fieldEl.val(game.fen());
-         fieldEl.select();
+         copyField();
      } else {
          fieldEl.val('Review is available upon game conclusion');
      }
@@ -759,7 +769,7 @@ Dark-Chess    </title>
  $('#pgnBtn').on('click', function() {
      if (is_over()) {
          fieldEl.val(game.pgn({ 'max_width': 5, 'newline_char': '\n' }));
-         fieldEl.select();
+         copyField();
      } else {
          fieldEl.val('Review is available upon game conclusion');
      }
@@ -776,7 +786,6 @@ Dark-Chess    </title>
      }
  });
 
-
  update();
 
  })();
@@ -785,9 +794,9 @@ Dark-Chess    </title>
 </article>
     </main>
 
-
-
-
+    <script type="text/javascript">
+     engage();
+    </script>
   </body>
 
 </html>
