licencing and privacy updates

--- a/chess.html
+++ b/chess.html
@@ -162,7 +162,7 @@ Chess    </title>
     
 <h2>For Correspondence Play</h2>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
-<script crossorigin="anonymous" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="/js/lib/jquery.js"></script>
 <script src="/js/chessboard.js"></script>
 <script src="/js/chess.js"></script>
 <p><span id="status"></span></p>
