--- a/dark-chess.html
+++ b/dark-chess.html
@@ -160,9 +160,10 @@ Dark-Chess    </title>
 </header>
 <article>
     
+<style type="text/css"> main { max-width: 50ch; } </style>
 <h2>For Correspondence Play</h2>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
-<script src="/js/lib/jquery.js"></script>
+<script src="/theme/js/lib/jquery.js"></script>
 <script src="/js/chessboard.js"></script>
 <script src="/js/chess.js"></script>
 <p><span id="status"></span></p>
@@ -786,7 +787,12 @@ Dark-Chess    </title>
      }
  });
 
+ window.onresize = board.resize;
  update();
+
+ // inelegant
+ board.resize();
+ setTimeout(board.resize, 1000);
 
  })();
 </script>
