correctly hide wikipedia summaries; reading-list

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@ About    </title>
                 </li>
                 <li>
                   <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                   </a>
                 </li>
               </ul>
