--- a/dark-chess.html
+++ b/dark-chess.html
@@ -117,7 +117,7 @@ Dark-Chess    </title>
                 </li>
                 <li>
                   <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                   </a>
                 </li>
               </ul>
@@ -790,7 +790,14 @@ Dark-Chess    </title>
  });
 
  window.onresize = update;
- update();
+ function wait_update() {
+     if (!($.isReady)) {
+         setTimeout(wait_update, 100);
+     } else {
+         update();
+     }
+ }
+ wait_update();
 
  })();
 </script>
