--- a/demo.html
+++ b/demo.html
@@ -116,7 +116,7 @@ Markdown Demo    </title>
                 </li>
                 <li>
                   <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                   </a>
                 </li>
               </ul>
@@ -1369,12 +1369,12 @@ hovered over. <a class="footnote-backref" href="#fnref-nocontext" id="generated
 </li>
 </ol>
 </div>
-<script src="theme/js/lib/d3.v5.min.js"></script>
+<script src="theme/js/lib/d3.js"></script>
 <script src="theme/js/lib/simplify.js"></script>
 <script src="theme/js/charts.js"></script>
 <script src="theme/js/chart_components.js"></script>
 
-<script src="theme/js/lib/twgl.min.js"></script>
+<script src="theme/js/lib/twgl.js"></script>
 <script src="theme/js/minshader.js"></script>
 <script id="twgl_vs" type="x-shader/x-vertex">
  attribute vec4 position;
