--- a/facebook.html
+++ b/facebook.html
@@ -116,7 +116,7 @@ It's So Much Bigger Than Facebook    </title>
                 </li>
                 <li>
                   <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                   </a>
                 </li>
               </ul>
