--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Reilly Raab    </title>
                 </li>
                 <li>
                   <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                   </a>
                 </li>
               </ul>
@@ -209,7 +209,7 @@ Reilly Raab    </title>
         <li>
             <p>
                 <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                 </a>
             </p>
         </li>
