--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@ Contact Info    </title>
                 </li>
                 <li>
                   <a href="reading-list.html">
-                    Favorite Readings
+                    Memetic Collections
                   </a>
                 </li>
               </ul>
