--- a/dark-chess.html
+++ b/dark-chess.html
@@ -160,7 +160,10 @@ Dark-Chess    </title>
 </header>
 <article>
     
-<style type="text/css"> main { max-width: 50ch; } </style>
+<style type="text/css">
+         main { max-width: 50ch; }
+         .wiki-extract { max-width: 50ch;}
+        </style>
 <h2>For Correspondence Play</h2>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
 <script src="/theme/js/lib/jquery.js"></script>
