--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Reilly Raab    </title>
               <p>Links</p>
               <ul>
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="/">Home</a>
                 </li>
                 <li>
                   <a href="about.html">
@@ -160,7 +160,33 @@ Reilly Raab    </title>
 </header>
 <article class="index">
     <h2>
-        Articles
+        Pages
+    </h2>
+    <ul class="toc">
+        <li>
+            <p>
+                <a href="about.html">
+                    About
+                </a>
+            </p>
+        </li>
+        <li>
+            <p>
+                <a href="contact.html">
+                    Contact Info
+                </a>
+            </p>
+        </li>
+        <li>
+            <p>
+                <a href="reading-list.html">
+                    Répertoire d'Idées Intéressantes
+                </a>
+            </p>
+        </li>
+    </ul>
+    <h2>
+        Posts
     </h2>
     <ul class="toc">
         <li>
@@ -184,32 +210,6 @@ Reilly Raab    </title>
                 -->
                 <a href="facebook.html">
                     It's So Much Bigger Than Facebook
-                </a>
-            </p>
-        </li>
-    </ul>
-    <h2>
-        Pages
-    </h2>
-    <ul class="toc">
-        <li>
-            <p>
-                <a href="about.html">
-                    About
-                </a>
-            </p>
-        </li>
-        <li>
-            <p>
-                <a href="contact.html">
-                    Contact Info
-                </a>
-            </p>
-        </li>
-        <li>
-            <p>
-                <a href="reading-list.html">
-                    Répertoire d'Idées Intéressantes
                 </a>
             </p>
         </li>
