--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@ About    </title>
               <p>Links</p>
               <ul>
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="/">Home</a>
                 </li>
                 <li>
                   <a href="about.html">
