--- a/demo.html
+++ b/demo.html
@@ -102,7 +102,7 @@ Markdown Demo    </title>
               <p>Links</p>
               <ul>
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="/">Home</a>
                 </li>
                 <li>
                   <a href="about.html">
