--- a/facebook.html
+++ b/facebook.html
@@ -102,7 +102,7 @@ It's So Much Bigger Than Facebook    </title>
               <p>Links</p>
               <ul>
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="/">Home</a>
                 </li>
                 <li>
                   <a href="about.html">
