--- a/reading-list.html
+++ b/reading-list.html
@@ -103,7 +103,7 @@ Répertoire d'Idées Intéressantes    </title>
               <p>Links</p>
               <ul>
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="/">Home</a>
                 </li>
                 <li>
                   <a href="about.html">
