Feb 3 Sunday Push

--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@ Reilly Raab    </title>
     <ul class="toc">
         <li>
             <p>
+                <a href="dynamical.html">
+                 2D Dynamical Systems
+                </a>
+            </p>
+        </li>
+        <li>
+            <p>
                 <a href="chess.html">
                  Chess
                 </a>
