update chess page headers

--- a/chess.html
+++ b/chess.html
@@ -166,10 +166,12 @@ Chess    </title>
 <article>
     
 <style type="text/css">
-         main { max-width: 50ch; }
-         .wiki-extract { max-width: 50ch;}
+          main { max-width: 60ch; }
+          .wiki-extract { max-width: 50ch; }
+          #title-header{ display: none; }
+          #top-spacer { display: none; }
         </style>
-<h2>For Correspondence Play</h2>
+<h2>Chess For Correspondence Play</h2>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
 <script src="/theme/js/lib/jquery.js"></script>
 <script src="/js/chessboard.js"></script>
