--- a/dark-chess.html
+++ b/dark-chess.html
@@ -166,10 +166,12 @@ Dark-Chess    </title>
 <article>
     
 <style type="text/css">
-         main { max-width: 50ch; }
-         .wiki-extract { max-width: 50ch;}
+          main { max-width: 60ch; }
+          .wiki-extract { max-width: 50ch; }
+          #title-header{ display: none; }
+          #top-spacer { display: none; }
         </style>
-<h2>For Correspondence Play</h2>
+<h2>Dark-Chess For Correspondence Play</h2>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
 <script src="/theme/js/lib/jquery.js"></script>
 <script src="/js/chessboard.js"></script>
@@ -194,7 +196,7 @@ Dark-Chess    </title>
 <input id="loadBtn" type="button" value="Load"/>
 </div>
 <br>
-</br>
+
 <textarea id="field" style="width: 100%; height: 400px;"></textarea>
 <hr/>
         Game Options: <br/><i>must be set at beginning of game</i> <br/><br/>
@@ -809,7 +811,7 @@ Dark-Chess    </title>
 
  })();
 </script>
-
+</br>
 </article>
     </main>
 
