--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@ Reilly Raab    </title>
         </li>
         <li>
             <p>
+                <a href="fischer-random.html">
+                 Fischer Random Chess
+                </a>
+            </p>
+        </li>
+        <li>
+            <p>
                 <a href="greyline.html">
                  Greyline Map
                 </a>
