fischer castling warning

--- a/fischer-random.html
+++ b/fischer-random.html
@@ -172,6 +172,7 @@ Fischer Random Chess    </title>
           #top-spacer { display: none; }
         </style>
 <h2>Chess960 For Correspondence Play</h2>
+<h3>Without castling working yet</h3>
 <link href="/css/chess.css" rel="stylesheet" type="text/css"/>
 <script src="/theme/js/lib/jquery.js"></script>
 <script src="/js/chessboard.js"></script>
